[package]
name = "hi-wallet"
version = "0.1.0"
authors = ["Hugh Lang <hughlang@gmail.com>"]
edition = "2018"

[lib]
name = "wallet"
path = "src/lib.rs"

[[bin]]
name = "calculator"
path = "src/calculator/main.rs"

[[bin]]
name = "prototype"
path = "src/prototype/main.rs"

[[bin]]
name = "wallet0"
path = "src/wallet0/wallet0.rs"


[dependencies]
calculate = "0.5.1"
orbtk = { path = "../orbtk" }


# [patch."https://gitlab.redox-os.org/redox-os/orbtk"]
# orbtk = { path = "../orbtk" }