[package]
name = "hi-wallet"
version = "0.1.0"
authors = ["Hugh Lang <hughlang@gmail.com>"]
edition = "2018"

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
name = "hi_wallet"
path = "src/lib.rs"

[dependencies.tweek]
path = "../tweek-rust"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.6"
color-backtrace = { version = "0.1" }

